--- a/index.html
+++ b/index.html
@@ -22,42 +22,20 @@
       <h1>
 <a id="pythonpropertyfileloader" class="anchor" href="#pythonpropertyfileloader" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>pythonpropertyfileloader</h1>
 
-<h2>
-<a id="a-python-module-to-load--property-files" class="anchor" href="#a-python-module-to-load--property-files" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>A python module to load  property files.</h2>
-
 <h3>
-<a id="actually-it-is-like-the-propertyplaceholderconfigurer-in-spring-which-lets-you-use-variable-reference-to-refer-to-already-defined-property-" class="anchor" href="#actually-it-is-like-the-propertyplaceholderconfigurer-in-spring-which-lets-you-use-variable-reference-to-refer-to-already-defined-property-" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Actually it is like the PropertyPlaceholderConfigurer in spring which lets you use ${variable-reference} to refer to already defined property ).</h3>
+<a id="a-python-module-to-load--property-files" class="anchor" href="#a-python-module-to-load--property-files" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>A python module to load  property files.</h3>
+
+<p>Actually it is like the PropertyPlaceholderConfigurer in spring which lets you use ${variable-reference} to refer to already defined property ).</p>
 
 <h2>
-<a id="example" class="anchor" href="#example" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><strong>Example</strong>
-</h2>
+<a id="install" class="anchor" href="#install" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Install</h2>
 
-<p>Let's say you have the following properties defined in my_file.properties file</p>
+<p><code>pip install property</code></p>
 
-<p>foo = I am awesome<br>
-bar = ${chocolate}-bar<br>
-chocolate = fudge
-long = a very long property that is described in the property file which takes up \
-multiple lines can be defined by the escape character as it is done here</p>
+<h2>
+<a id="documentation" class="anchor" href="#documentation" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Documentation</h2>
 
-<p>*<em>Code to load the above properties  *</em></p>
-
-<p><code>from properties import p</code></p>
-
-<p><code>prop = p.Property()</code>
-<code>prop.load('path/to/my_file.properties')</code>
-<code>prop.get('foo')  # I am awesome</code>
-<code>prop.get('bar')  # fudge-bar</code>
-<code>prop.get('long')  # a very long property that is described in the property file which takes up multiple lines can be defined by the escape character as it is done here</code>
-<code>prop.get('unknown')   # None</code></p>
-
-<p><strong>Use showall() to get the key value pair of all the properties defined in the file(s)</strong></p>
-
-<p><code>print(prop.showall()) # {'long': 'a very long property that is described in the property file which takes up multiple lines can be defined by the escape character as it is done here', 'foo': 'I am awesome', 'chocolate': 'fudge', 'bar': '${chocolate}-bar'}</code></p>
-
-<p><strong>To load multiple property files use</strong></p>
-
-<p><code>prop.load('path/to/first_file','path/to/second_file',....'path/to/nth_file')</code></p>
+<p><a href="http://pythonhosted.org/property/">http://pythonhosted.org/property/</a></p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/anandjoshi91/pythonpropertyfileloader">Pythonpropertyfileloader</a> is maintained by <a href="https://github.com/anandjoshi91">anandjoshi91</a>.</span>
